# FMBP

./: .gitignore  NOTICE  README.md  pyproject.toml
examples/: config.json
examples/drones/: drone_0.uvl  drone_1.py  drone_1.uvl  drone_2.py  drone_2.uvl  drone_3.py  drone_3.uvl  drone_4.py  drone_4.uvl  drone_base.py  drones.py
examples/smart_home/: smart_home.py  smart_home.uvl
examples/water_tank/: water_tank.py  water_tank.uvl
fmbp/: bp_model.py  configuration_provider.py  consistency_checker.py  const.py  context_source.py  fm.py  fm_bp.py  model_interface.py  model_watcher.py
